--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- This script loads the Appian Web components; change it to your Appian server's domain -->
-    <script src="https://c02rq16kg8wl.appiancorp.com:8080/ae/tempo/ui/sail-client/embeddedBootstrap.nocache.js" id="appianEmbedded"></script>
+    <script src="https://master.appianci.net/suite/tempo/ui/sail-client/embeddedBootstrap.nocache.js" id="appianEmbedded"></script>
   </head>
   <body>
     <!-- This custom HTML element specifies an Appian report to embed on the HTML page -->
