--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"/>
     <!-- This script loads the Appian Web components; change it to your Appian server's domain -->
     <script src="https://master.appianci.net/suite/tempo/ui/sail-client/embeddedBootstrap.nocache.js" id="appianEmbedded"></script>
   </head>
